<resources>
    <string name="app_name">Password Manager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="update">Update</string>
    <string name="join">Join</string>
    <string name="welcome">Welcome to Password Manager application!</string>
    <string name="welcome_message">We understand the importance of securing your sensitive information, and we\'re here to assist you in keeping your passwords safe and easily accessible. To get started, please create a strong and memorable master password that will serve as the key to unlock your password storage.</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="delete_all">Delete All</string>
    <string name="sort">Sort</string>
    <string name="title">Title</string>
    <string name="username">username</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="are_you_sure_that_you_want_to_delete_all_passwords">Are you sure that you want to delete all passwords</string>
    <string name="no_saved_passwords_found">No Saved Passwords Found</string>

</resources>