<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText">
    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

<!--    <item-->
<!--        android:id="@+id/sort"-->
<!--        android:icon="@drawable/baseline_sort_24"-->
<!--        android:title="@string/sort"-->
<!--        app:showAsAction="ifRoom|collapseActionView" />-->
<!--    />-->
    <item
        android:id="@+id/delete"
        android:title="@string/delete_all"
        app:showAsAction="never"
    />

    <item
        android:id="@+id/loginFragment"
        android:title="@string/exit"
        app:showAsAction="never"
        />

</menu>